cmake_minimum_required (VERSION 3.1)
project (BenchMine)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(RakLib)

set(HEADERS
	source/Server.h
	source/common/Compression.h
	source/common/Utils.h
	source/common/jsonxx.h
	source/logger/ColoredLogger.h
	source/network/minecraft/AddEntity.h
	source/network/minecraft/AddHangingEntity.h
	source/network/minecraft/AddItem.h
	source/network/minecraft/AddItemEntity.h
	source/network/minecraft/AddPainting.h
	source/network/minecraft/AddPlayer.h
	source/network/minecraft/AdventureSettings.h
	source/network/minecraft/Animate.h
	source/network/minecraft/AvailableCommands.h
	source/network/minecraft/Batch.h
	source/network/minecraft/BlockEntityData.h
	source/network/minecraft/BlockEvent.h
	source/network/minecraft/BlockPickRequest.h
	source/network/minecraft/ChangeDimension.h
	source/network/minecraft/ChunkRadiusUpdated.h
	source/network/minecraft/ClientHandshake.h
	source/network/minecraft/ClientboundMapItemData.h
	source/network/minecraft/CommandBlockUpdate.h
	source/network/minecraft/CommandStep.h
	source/network/minecraft/ContainerClose.h
	source/network/minecraft/ContainerOpen.h
	source/network/minecraft/ContainerSetContent.h
	source/network/minecraft/ContainerSetData.h
	source/network/minecraft/ContainerSetSlot.h
	source/network/minecraft/CraftingData.h
	source/network/minecraft/CraftingEvent.h
	source/network/minecraft/Disconnect.h
	source/network/minecraft/DropItem.h
	source/network/minecraft/EntityEvent.h
	source/network/minecraft/Explode.h
	source/network/minecraft/FullChunkData.h
	source/network/minecraft/HurtArmor.h
	source/network/minecraft/Interact.h
	source/network/minecraft/InventoryAction.h
	source/network/minecraft/ItemFrameDropItem.h
	source/network/minecraft/LevelEvent.h
	source/network/minecraft/LevelSoundEvent.h
	source/network/minecraft/Login.h
	source/network/minecraft/MapInfoRequest.h
	source/network/minecraft/MinecraftPackets.h
	source/network/minecraft/MobArmorEquipment.h
	source/network/minecraft/MobEffect.h
	source/network/minecraft/MobEquipment.h
	source/network/minecraft/MoveEntity.h
	source/network/minecraft/MovePlayer.h
	source/network/minecraft/PlaySound.h
	source/network/minecraft/PlayStatus.h
	source/network/minecraft/PlayerAction.h
	source/network/minecraft/PlayerFall.h
	source/network/minecraft/PlayerInput.h
	source/network/minecraft/PlayerList.h
	source/network/minecraft/RemoveBlock.h
	source/network/minecraft/RemoveEntity.h
	source/network/minecraft/ReplaceSelectedSlot.h
	source/network/minecraft/RequestChunkData.h
	source/network/minecraft/ResourcePackChunkData.h
	source/network/minecraft/ResourcePackChunkRequest.h
	source/network/minecraft/ResourcePackClientResponse.h
	source/network/minecraft/ResourcePackDataInfo.h
	source/network/minecraft/ResourcePackStack.h
	source/network/minecraft/ResourcePacksInfo.h
	source/network/minecraft/Respawn.h
	source/network/minecraft/RiderJump.h
	source/network/minecraft/ServerHandshake.h
	source/network/minecraft/SetCommandsEnabled.h
	source/network/minecraft/SetDifficulty.h
	source/network/minecraft/SetEntityData.h
	source/network/minecraft/SetEntityLink.h
	source/network/minecraft/SetEntityMotion.h
	source/network/minecraft/SetGameMode.h
	source/network/minecraft/SetHealth.h
	source/network/minecraft/SetSpawnPosition.h
	source/network/minecraft/SetTime.h
	source/network/minecraft/SetTitle.h
	source/network/minecraft/ShowCredits.h
	source/network/minecraft/SpawnExperienceOrb.h
	source/network/minecraft/StartGame.h
	source/network/minecraft/StopSound.h
	source/network/minecraft/TakeItemEntity.h
	source/network/minecraft/Text.h
	source/network/minecraft/Transfer.h
	source/network/minecraft/UpdateAttributes.h
	source/network/minecraft/UpdateBlock.h
	source/network/minecraft/UpdateTrade.h
	source/network/minecraft/UseItem.h
	source/network/raknet/ConnectionAccepted.h
	source/network/raknet/ConnectionRequest.h
	source/network/raknet/Ping.h
	source/network/raknet/Pong.h
	source/network/raknet/RaknetPackets.h
	source/scheduler/CallbackTask.h
	source/scheduler/Task.h
	source/scheduler/TaskHandler.h
	source/world/entity/Entity.h
	source/world/entity/player/NetworkSession.h
	source/world/entity/player/Player.h
	source/world/entity/player/Skin.h
	source/world/level/Level.h
	source/world/level/chunk/Chunk.h
	source/world/level/chunk/ChunkSection.h
	source/world/math/Vector2f.h
	source/world/math/Vector2i.h
	source/world/math/Vector3f.h
	source/world/math/Vector3i.h)

set(SOURCES
	source/Main.cpp
	source/Server.cpp
	source/common/Compression.cpp
	source/common/Utils.cpp
	source/common/jsonxx.cpp
	source/logger/ColoredLogger.cpp
	source/network/minecraft/AddEntity.cpp
	source/network/minecraft/AddHangingEntity.cpp
	source/network/minecraft/AddItem.cpp
	source/network/minecraft/AddItemEntity.cpp
	source/network/minecraft/AddPainting.cpp
	source/network/minecraft/AddPlayer.cpp
	source/network/minecraft/AdventureSettings.cpp
	source/network/minecraft/Animate.cpp
	source/network/minecraft/AvailableCommands.cpp
	source/network/minecraft/Batch.cpp
	source/network/minecraft/BlockEntityData.cpp
	source/network/minecraft/BlockEvent.cpp
	source/network/minecraft/BlockPickRequest.cpp
	source/network/minecraft/ChangeDimension.cpp
	source/network/minecraft/ChunkRadiusUpdated.cpp
	source/network/minecraft/ClientHandshake.cpp
	source/network/minecraft/ClientboundMapItemData.cpp
	source/network/minecraft/CommandBlockUpdate.cpp
	source/network/minecraft/CommandStep.cpp
	source/network/minecraft/ContainerClose.cpp
	source/network/minecraft/ContainerOpen.cpp
	source/network/minecraft/ContainerSetContent.cpp
	source/network/minecraft/ContainerSetData.cpp
	source/network/minecraft/ContainerSetSlot.cpp
	source/network/minecraft/CraftingData.cpp
	source/network/minecraft/CraftingEvent.cpp
	source/network/minecraft/Disconnect.cpp
	source/network/minecraft/DropItem.cpp
	source/network/minecraft/EntityEvent.cpp
	source/network/minecraft/Explode.cpp
	source/network/minecraft/FullChunkData.cpp
	source/network/minecraft/HurtArmor.cpp
	source/network/minecraft/Interact.cpp
	source/network/minecraft/InventoryAction.cpp
	source/network/minecraft/ItemFrameDropItem.cpp
	source/network/minecraft/LevelEvent.cpp
	source/network/minecraft/LevelSoundEvent.cpp
	source/network/minecraft/Login.cpp
	source/network/minecraft/MapInfoRequest.cpp
	source/network/minecraft/MobArmorEquipment.cpp
	source/network/minecraft/MobEffect.cpp
	source/network/minecraft/MobEquipment.cpp
	source/network/minecraft/MoveEntity.cpp
	source/network/minecraft/MovePlayer.cpp
	source/network/minecraft/PlaySound.cpp
	source/network/minecraft/PlayStatus.cpp
	source/network/minecraft/PlayerAction.cpp
	source/network/minecraft/PlayerFall.cpp
	source/network/minecraft/PlayerInput.cpp
	source/network/minecraft/PlayerList.cpp
	source/network/minecraft/RemoveBlock.cpp
	source/network/minecraft/RemoveEntity.cpp
	source/network/minecraft/ReplaceSelectedSlot.cpp
	source/network/minecraft/RequestChunkData.cpp
	source/network/minecraft/ResourcePackChunkData.cpp
	source/network/minecraft/ResourcePackChunkRequest.cpp
	source/network/minecraft/ResourcePackClientResponse.cpp
	source/network/minecraft/ResourcePackDataInfo.cpp
	source/network/minecraft/ResourcePackStack.cpp
	source/network/minecraft/ResourcePacksInfo.cpp
	source/network/minecraft/Respawn.cpp
	source/network/minecraft/RiderJump.cpp
	source/network/minecraft/ServerHandshake.cpp
	source/network/minecraft/SetCommandsEnabled.cpp
	source/network/minecraft/SetDifficulty.cpp
	source/network/minecraft/SetEntityData.cpp
	source/network/minecraft/SetEntityLink.cpp
	source/network/minecraft/SetEntityMotion.cpp
	source/network/minecraft/SetGameMode.cpp
	source/network/minecraft/SetHealth.cpp
	source/network/minecraft/SetSpawnPosition.cpp
	source/network/minecraft/SetTime.cpp
	source/network/minecraft/SetTitle.cpp
	source/network/minecraft/ShowCredits.cpp
	source/network/minecraft/SpawnExperienceOrb.cpp
	source/network/minecraft/StartGame.cpp
	source/network/minecraft/StopSound.cpp
	source/network/minecraft/TakeItemEntity.cpp
	source/network/minecraft/Text.cpp
	source/network/minecraft/Transfer.cpp
	source/network/minecraft/UpdateAttributes.cpp
	source/network/minecraft/UpdateBlock.cpp
	source/network/minecraft/UpdateTrade.cpp
	source/network/minecraft/UseItem.cpp
	source/network/raknet/ConnectionAccepted.cpp
	source/network/raknet/ConnectionRequest.cpp
	source/network/raknet/Ping.cpp
	source/network/raknet/Pong.cpp
	source/scheduler/CallbackTask.cpp
	source/scheduler/Task.cpp
	source/scheduler/TaskHandler.cpp
	source/world/entity/Entity.cpp
	source/world/entity/player/NetworkSession.cpp
	source/world/entity/player/Player.cpp
	source/world/entity/player/Skin.cpp
	source/world/level/Level.cpp
	source/world/level/chunk/Chunk.cpp
	source/world/level/chunk/ChunkSection.cpp
	source/world/math/Vector2f.cpp
	source/world/math/Vector2i.cpp
	source/world/math/Vector3f.cpp
	source/world/math/Vector3i.cpp)

find_package(Threads REQUIRED)

include_directories(source)
include_directories(RakLib/include)

add_executable(BenchMine ${SOURCES} ${HEADERS})
target_link_libraries(BenchMine RakLib ${CMAKE_THREAD_LIBS_INIT})